fix: major responsiveness touches, new dark/light theme variables for better performance and readability

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -41,16 +41,20 @@
   --color-primary-950: #400a0a;
 
   --color-background: rgb(230, 243, 245);
-  --color-header-bg: rgb(222 226 228);
+  --color-box-bg: rgb(247, 247, 254);
+  /* --color-header-bg: rgb(222 226 228); */
   --color-foreground: rgb(32, 30, 30);
 
-  --color-accent: rgb(143, 116, 248);
+  --color-accent: rgb(193, 71, 37);
   --color-inactive: gray;
 
   --color-box-shadow: rgb(226, 226, 230);
 
   --color-gradient-start: #e9a075;
   --color-gradient-end: #cb5554;
+
+  /* I had to hardcode this because Flowbite is a bitch. */
+  --color-gray-50: var(--color-background);
 }
 
 /* ******************** Dark theme overrides ************************** */
@@ -68,8 +72,10 @@
   --color-primary-950: #391b0f;
 
   --color-background: rgb(29 31 34);
-  --color-header-bg: rgb(16 17 17);
+  --color-box-bg: rgb(22, 22, 24);
+  /* --color-header-bg: rgb(16 17 17); */
   --color-foreground: rgb(240 233 233);
+
 
   --color-accent: rgb(252, 61, 61);
   --color-inactive: rgb(223, 217, 217);
@@ -78,6 +84,9 @@
 
   --color-gradient-start: #0e0e1700;
   --color-gradient-end: #17202400;
+
+  /* I had to hardcode this because Flowbite is a bitch. */
+  --color-gray-800: var(--color-background);
   
 }
 
